--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "pino": "^8.12.1",
     "pino-pretty": "^10.0.0",
     "typeorm": "^0.3.15"
