--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "prettier": "prettier --write 'src/**/*.js'"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -17,7 +18,9 @@
   "devDependencies": {
     "nodemon": "^2.0.22",
     "npm": "^9.6.6",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3"
   },
   "main": "index.js"
 }
