--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,8 @@ MYSQL_HOST=
 MYSQL_USER=
 MYSQL_PASSWORD=
 MYSQL_DATABASE=
+REDIS_HOST=
+REDIS_PORT=
+JWT_SECRET=
+JWT_ACCESSTOKEN_EXPIRES_IN=
+JWT_REFRESHTOKEN_EXPIRES_IN=
