--- a/.env.sample
+++ b/.env.sample
@@ -9,6 +9,8 @@ MYSQL_PASSWORD=
 MYSQL_DATABASE=
 REDIS_HOST=
 REDIS_PORT=
+REDIS_ACCESSTOKEN_EXPIRES_IN=
+REDIS_REFRESHTOKEN_EXPIRES_IN=
 JWT_SECRET=
 JWT_ACCESSTOKEN_EXPIRES_IN=
 JWT_REFRESHTOKEN_EXPIRES_IN=
