[add] passport facebook.lib , passport instagram.lib, passport twitter.lib, https server setting (now, not using), add table column deleted_at

--- a/.env.sample
+++ b/.env.sample
@@ -1,12 +1,14 @@
 APPLICATION_NAME=
 NODE_ENV=
-PORT=
+HTTP_PORT=
+HTTPS_PORT=
 MYSQL_URI=
 MYSQL_PORT=
 MYSQL_HOST=
 MYSQL_USER=
 MYSQL_PASSWORD=
 MYSQL_DATABASE=
+TYPEORM_SYNCHRONIZE=
 REDIS_HOST=
 REDIS_PORT=
 REDIS_ACCESSTOKEN_EXPIRES_IN=
@@ -16,3 +18,7 @@ JWT_ACCESSTOKEN_EXPIRES_IN=
 JWT_REFRESHTOKEN_EXPIRES_IN=
 GOOGLE_OAUTH_CLIENT_ID=
 GOOGLE_OAUTH_SECURE_PASSWORD=
+GOOGLE_OAUTH_REDIRECT=
+INSTAGRAM_OAUTH_CLIENT_ID=
+INSTAGRAM_OAUTH_CLIENT_SECRET=
+INSTAGRAM_OAUTH_REDIRECT=
