[modify] dotenv port naming

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APPLICATION_NAME=HG
 NODE_ENV=development
-PORT=3000
+HTTP_PORT=80
 MYSQL_URI=postgres://user:iMT1sIZ7jrVJfPOjxnxhGcsNNNYGaO1h@dpg-chh07p2k728sd6m9jtbg-a.oregon-postgres.render.com:5432/hg_2c7f
 MYSQL_PORT=5432
 MYSQL_HOST=dpg-chh07p2k728sd6m9jtbg-a.oregon-postgres.render.com
