--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pg": "^8.11.0",
     "pino": "^8.12.1",
     "pino-pretty": "^10.0.0",
     "redis": "^4.6.6",
