--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nodemon": "^2.0.22",
     "npm": "^9.6.6",
     "prettier": "^2.8.8",
+    "supertest": "^6.3.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3"
   },
